# MiniSQL

./: .gitignore  CMakeLists.txt  HowToRun.md  build.sh  build_debug.sh  db_university.txt  record_log.txt  setup_env.sh
database/: input.sql  use_database.sql
src/: main.cpp
src/includes/: database.cpp  database.hpp  globals.cpp  globals.hpp  parser.cpp  parser.hpp  query.cpp  query.hpp  table.cpp  table.hpp
